[gd_scene load_steps=5 format=3 uid="uid://crnj2xuyitq2v"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_c6rgf"]
[ext_resource type="FontFile" uid="uid://bntlca4acmi8d" path="res://Resources/Fonts/The Score.otf" id="2_qpt6i"]
[ext_resource type="AudioStream" uid="uid://db7mkhwd7xalj" path="res://Resources/Sounds/blip.wav" id="3_8uebc"]
[ext_resource type="AudioStream" uid="uid://c6l58cxf74w4n" path="res://Resources/Sounds/Mouse_click.wav" id="5_pebj3"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_c6rgf")

[node name="Background" type="Sprite2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LbVersion" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -30.0
offset_right = 82.0
offset_bottom = -16.0
grow_vertical = 0
focus_mode = 2
theme_override_fonts/font = ExtResource("2_qpt6i")
theme_override_font_sizes/font_size = 16
text = "Version 0.0.1"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -114.0
offset_right = 132.0
offset_bottom = 114.0
grow_vertical = 2
theme_override_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BtnPlay" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../BtnSettings")
theme_type_variation = &"MenuFlat"
action_mode = 0
text = "Play"
flat = true
alignment = 0

[node name="BtnSettings" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnPlay")
focus_neighbor_bottom = NodePath("../BtnCredits")
theme_type_variation = &"MenuFlat"
text = "Settings"
flat = true
alignment = 0

[node name="BtnCredits" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../BtnSettings")
focus_neighbor_bottom = NodePath("../BtnQuit")
theme_type_variation = &"MenuFlat"
text = "Credits"
flat = true
alignment = 0

[node name="BtnQuit" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../BtnCredits")
theme_type_variation = &"MenuFlat"
text = "Quit"
flat = true
alignment = 0

[node name="AudioStreamSFXPointing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8uebc")
bus = &"SFX"

[node name="AudioStreamSFXClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pebj3")
bus = &"SFX"

[connection signal="focus_entered" from="CanvasLayer/MarginContainer/VBoxContainer/BtnPlay" to="." method="_on_btn_play_focus_entered"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/BtnPlay" to="." method="_on_btn_play_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/BtnPlay" to="." method="_on_btn_play_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/BtnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="focus_entered" from="CanvasLayer/MarginContainer/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_focus_entered"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="focus_entered" from="CanvasLayer/MarginContainer/VBoxContainer/BtnCredits" to="." method="_on_btn_credits_focus_entered"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/BtnCredits" to="." method="_on_btn_credits_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/BtnCredits" to="." method="_on_btn_credits_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/BtnCredits" to="." method="_on_btn_credits_pressed"]
[connection signal="focus_entered" from="CanvasLayer/MarginContainer/VBoxContainer/BtnQuit" to="." method="_on_btn_quit_focus_entered"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/BtnQuit" to="." method="_on_btn_quit_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/BtnQuit" to="." method="_on_btn_quit_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
